# LLM-bench

./: .gitignore  README.md  mbti_guides.json  priming_without_mention_of_mbti.json  prompts.py  prompts_v2.py  pyproject.toml  test_cases.json
notebooks/: edge_case_test.ipynb  first_chat_test.ipynb  llm-bench.ipynb
results/: benchmark_results_20260130_104817.csv  benchmark_results_20260130_110725.csv  benchmark_results_20260130_115109.csv  benchmark_results_20260130_161817.csv  benchmark_results_20260205_164248.html  edge_benchmark_20260211_235848.html
