[project]
name = "LLM-bench"
version = "0.1.0"
description = "K-pop 아이돌 캐릭터 MBTI 기반 대화 벤치마크"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]